# manim-GearBox

./: pyproject.toml
src/manim_gearbox/gear_mobject/: Gear_mobject.py
